# colorless-claude-children

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.explore  Dockerfile.explore.dockerignore  HIKING-PLAN.md  PLAN.md  README.md  albums-files.json  albums.json  all.html  app.js  folderIndex.html  index.html  nginx.conf  preview.html  styles.css
.github/workflows/: deploy.yml
colorless-days/: index.html
cv/: .firebaserc  firebase.json  index.html
explore/: README.md  pyproject.toml
explore/explore/: corpus.py  server.py
explore/explore/static/: explore.html
k8s/: deployment.yml  explore-proxy.yml  frontend-config.yml  ingress.yml  managed-certs.yml  service.yml
log-search/: .gitignore  README.md  pyproject.toml
log-search/log_search/: ask.py  captioner.py  chunker.py  cloud_cache.py  embedder.py  paths.py  qa.py  retriever.py  server.py
log-search/log_search/static/: index.html
photo-search/: .gitignore  PLAN.md  README.md  pyproject.toml
photo-search/photo_search/: alias_expand.py  ask.py  cloud_cache.py  coord_resolver.py  dedup.py  embedder.py  face_cluster.py  face_detect.py  face_promote.py  hiking_links.py  indexer.py  paths.py  place_baker.py  qa.py  rerank.py  retriever.py  routing.py  server.py  site.py
photo-search/photo_search/data/: place_aliases.json  place_coords.json  place_labels.json
photo-search/photo_search/static/: index.html
photo-search/photo_search/tools/: __init__.py  base.py  filter_by_date_range.py  filter_by_location.py  filter_by_person.py  filter_by_proximity.py
search-common/: README.md  pyproject.toml
search-common/search_common/: auth.py  generation.py  rate_limit.py  settings.py
