[project]
name = "explore"
version = "0.1.0"
requires-python = ">=3.11"
description = "FastAPI service for serg.vlassiev.info/explore — combined photo + log search"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.16",
    "google-cloud-storage>=2.18",
    "google-genai>=1.0",
    "google-cloud-aiplatform>=1.95",
    "numpy>=2.0",
    "pillow>=11.0",
    "pydantic>=2.7",
    "search-common",
    "photo-search",
    "log-search",
]

[tool.uv.sources]
search-common = { path = "../search-common", editable = true }
photo-search = { path = "../photo-search", editable = true }
log-search = { path = "../log-search", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explore"]
