[project]
name = "photo-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-cloud-aiplatform>=1.149.0",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.73.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "search-common",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
# Offline face pipeline only. Installed on the laptop with `uv sync --extra face`;
# NOT part of the deployed explore image, which installs main deps only.
# (pillow is already a main dep, so it is not repeated here.)
face = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
    "scikit-learn>=1.3",
]

[tool.uv.sources]
search-common = { path = "../search-common", editable = true }
