[project]
name = "search-common"
version = "0.1.0"
requires-python = ">=3.11"
description = "Shared auth + rate-limit + settings library for serg.vlassiev.info/explore"
dependencies = [
    "fastapi>=0.115",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.16",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_common"]
